5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1800_2567.log
== TEST (2019-06-09 02:02:56) 
-- CODE:
n = int(input("Base: "))

t = n

while(t >= 1):
	print(t * "*")
	t = t - 1
t = 1
while(t <= n):
	print(t * "*")
	t = t + 1
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 02:03:04) 
-- CODE:
n = int(input("Base: "))

t = n

while(t >= 1):
	print(t * "*")
	t = t - 1
t = 1
while(t <= n):
	print(t * "*")
	t = t + 1
-- EXECUTION TIME:
0.801922
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:25) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:35) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:36) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:37) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:37) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:17:43) 
-- CODE:
n = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- EXECUTION TIME:
0.721883
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2567/main.py", line 3, in <module>
    for i in range(num):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:18:10) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- EXECUTION TIME:
0.784659
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
*******
*******
*******
*******
*******
*******
*******
*******
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
**********
**********
**********
**********
**********
**********
**********
**********
**********
**********
**********
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:28:12) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- OUTPUT:
*******
*******
*******
*******
*******
*******
*******
*******
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:09:41) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- OUTPUT:
*******
*******
*******
*******
*******
*******
*******
*******
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:09:50) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - 1) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- EXECUTION TIME:
0.678216
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
*******
*******
*******
*******
*******
*******
*******
*******
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
**********
**********
**********
**********
**********
**********
**********
**********
**********
**********
**********
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
************************
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:10:20) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - i) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:10:27) 
-- CODE:
num = int(input("Base: "))

for i in range(num):
	print((num - i) * "*")
	
for i in range(num):
	print((i + 1) * "*")
-- EXECUTION TIME:
0.704886
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
